Add TSOA file upload and return file blob on GET
